changes organizing files

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
-data/*/*.wav
-data/*/*.mp3
-data/*/*.png
-data/*/*/*.wav
-data/*/*/*.mp3
-data/*/*/*.png
-data/*/*/*/*/*.wav
-data/*/*/*/*/*.mp3
-data/*/*/*/*/*.png
 */__pycache__
-
+data/*/*/*/*.wav
+data/*/*/*/*.mp3
+data/*/*/*/*.png
